--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ hex = { version = "0.4", default-features = false, features = ["alloc"] }
 sha2 = { version = "0.9", default-features = false }
 rand_core = { version = "0.6", default-features = false }
 curve25519-dalek = { package = "curve25519-dalek-ng", version = "4.1", default-features = false, features = ["u64_backend", "alloc"] }
-serde = { version = "1", default-features = false, features = ["derive"] }
+serde = { version = "1", optional = true, features = ["derive"] }
 zeroize = { version = "1.1", default-features = false }
 thiserror = { version = "1", optional = true }
 
@@ -30,7 +30,7 @@ once_cell = "1.4"
 
 [features]
 std = ["thiserror"]
-default = ["std"]
+default = ["serde", "std"]
 
 [[test]]
 name = "rfc8032"
